# gpx_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
cmake/: gpx_cppConfig.cmake.in
examples/: gpx_inspect.cpp  type_check.cpp
include/gpx/: document.h  document.hpp  gpx_parser.h  gpx_types.h  parser.h  parser.hpp  state.h  types.h  types.hpp
src/: document.cpp  gpx_parser.cpp  parser.cpp  state.cpp
tests/: CMakeLists.txt  parser_tests.cpp  state_tests.cpp  test_utils.cpp  test_utils.h  utilstests.cpp
tests/test_data/: valid_simple.gpx
